# EvenManager

./: .gitignore  README.md  pyproject.toml  source.txt
backend/src/core/: settings.py  urls.py
backend/src/events/: models.py
backend/src/events/api/: serializers.py  urls.py  views.py
backend/src/events/migrations/: 0001_initial.py
events-app/: .gitignore  App.js  app.json  package-lock.json  package.json
events-app/components/: event-item.js  event-list.js
events-app/data/: data.js
events-app/navigation/: drawer.js  option.js  stack.js  tab.js
events-app/screens/: event-detail-screen.js  home-screen.js  new-event-screen.js  qr-code-screen.js
events-app/screens/profiles/: profile-detail-screen.js  profiles-screen.js
