[tool.poetry]
name = "eventmanager"
version = "0.1.0"
description = ""
authors = ["Gurkan Akcakaya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
expo = "^0.1.2"
djangorestframework = "^3.14.0"
pillow = "^10.0.0"
qrcode = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
